Rearranged Settings Menu

--- a/app/src/main/res/values-en-rCA/strings.xml
+++ b/app/src/main/res/values-en-rCA/strings.xml
@@ -107,7 +107,7 @@
     <string name="past_three_months">Past 3 months</string>
     <string name="this_year">This year</string>
     <string name="equalizer">Equaliser</string>
-    <string name="pref_header_colors">Colors</string>
+    <string name="pref_header_colors">Customize</string>
     <string name="pref_header_now_playing_screen">Now playing</string>
     <string name="pref_title_general_theme">General theme</string>
     <string name="pref_header_audio">Audio</string>
