--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -215,4 +215,6 @@
     <string name="bug_report_failed_unknown">Ocorreu um erro inesperado. Por favor contacte o desenvolvedor da aplicação.</string>
     <string name="your_account_data_is_only_used_for_authentication">A sua informação da conta é apenas usada para a autenticação.</string>
     <string name="you_will_be_forwarded_to_the_issue_tracker_website">Vai ser reencaminhado para o site do rastreador de problemas.</string>
+    <string name="rating_text">Gosta da aplicação? Adoraríamos saber! Obrigado pelo seu tempo.</string>
+    <string name="rating_title">Desculpe interromper, mas a sua classificação é muito importante para nós :)</string>
 </resources>
