--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -302,4 +302,6 @@
     <string name="finish_current_music_sleep_timer">Последняя песня завершилась</string>
     <string name="dialog_ringtone_title">Установить рингтон</string>
     <string name="dialog_ringtone_message">Разрешить приложению изменять настройки аудио</string>
+    <string name="rating_text">Вам нравится приложение? Мы хотели бы знать об этом! Спасибо за ваше время.</string>
+    <string name="rating_title">Извините, что перебиваю, но ваш рейтинг очень важен для нас :)</string>
 </resources>
