--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -302,4 +302,6 @@
     <string name="finish_current_music_sleep_timer">Son şarkıyı bitir</string>
     <string name="dialog_ringtone_title">Zil sesi olarak ayarla</string>
     <string name="dialog_ringtone_message">Phonograph\'ın ses ayarlarını değiştirmesine izin ver</string>
+    <string name="rating_text">Uygulamayı beğendiniz mi? Bunu bilmek isteriz! Zaman ayırdığınız için teşekkür ederiz.</string>
+    <string name="rating_title">Sözünüzü kestiğim için üzgünüz, ancak puanınız bizim için çok önemli :)</string>
 </resources>
