--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -302,4 +302,6 @@
     <string name="finish_current_music_sleep_timer">播完最后一首</string>
     <string name="dialog_ringtone_title">设置为铃声</string>
     <string name="dialog_ringtone_message">允许 Phonograph 调整音频设定</string>
+    <string name="rating_text">你喜欢这个应用程序吗？我们很想知道它！谢谢你的时间。</string>
+    <string name="rating_title">很抱歉打扰，但您的评分对我们非常重要:)</string>
 </resources>
