--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,4 +348,7 @@
     <string name="app_eq">App EQ</string>
     <string name="system_eq">System EQ (if available)</string>
 
+    <string name="rating_text">Do you like the app? We\'d love to know about it! Thank you for your time.</string>
+    <string name="rating_title">Sorry to interrupt, but your rating is very important to us :)</string>
+
 </resources>
