--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -304,4 +304,16 @@
     <string name="dialog_ringtone_message">Permitir que o Phonograph modifique as configurações de áudio</string>
     <string name="rating_text">Você gosta do aplicativo? Adoraríamos saber sobre isso! Obrigado pelo seu tempo.</string>
     <string name="rating_title">Desculpe interromper, mas sua classificação é muito importante para nós :)</string>
+    <string name="shop_title">Desbloqueie tudo</string>
+    <string name="shop_sub">Pro pack desbloqueia todos os temas, recursos pro e suporta o desenvolvimento.</string>
+    <string name="shop_desc0">Nenhum anúncio nunca</string>
+    <string name="shop_sub0">Este aplicativo não é suportado por anúncios e pretende permanecer assim. A versão Pro será sempre livre de anúncios.</string>
+    <string name="shop_desc1">Todos os Temas</string>
+    <string name="shop_sub1">Noite estrelada animada, embaçada, enérgica e muito mais!</string>
+    <string name="shop_desc2">Características Pro</string>
+    <string name="shop_sub2">Incluindo temporizador de sono, personalização e muito mais!</string>
+    <string name="shop_desc3">Todas as telas em reprodução</string>
+    <string name="shop_sub3">Inclui novo leitor Blur com um design minimalista e limpo.</string>
+    <string name="shop_desc4">Futuras atualizações do Pro</string>
+    <string name="shop_sub4">Inclui qualquer conteúdo profissional adicionado em atualizações futuras!</string>
 </resources>
