--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -89,4 +89,16 @@ Vill du radera <b>%1$d</b> låtar?
     <string name="new_playlist_title">Ny spellista</string>
     <string name="rating_text">Gillar du appen? Vi vill gärna veta om det! Tack för din tid.</string>
     <string name="rating_title">Ledsen att avbryta, men ditt betyg är mycket viktigt för oss :)</string>
+    <string name="shop_title">Lås upp allt</string>
+    <string name="shop_sub">Pro pack låser upp alla teman, pro-funktioner och stöder utveckling.</string>
+    <string name="shop_desc0">Inga annonser någonsin</string>
+    <string name="shop_sub0">Den här appen stöds inte av annonser och syftar till att förbli så. Pro-versionen kommer alltid att vara annonsfri.</string>
+    <string name="shop_desc1">Alla teman</string>
+    <string name="shop_sub1">Animerad stjärnklar natt, suddig, energisk och mer!</string>
+    <string name="shop_desc2">Pro-funktioner</string>
+    <string name="shop_sub2">Inklusive sömntimer, anpassning och mer!</string>
+    <string name="shop_desc3">Alla nu spelade skärmar</string>
+    <string name="shop_sub3">Inkluderar ny oskärpaspelare med en ren minimal design.</string>
+    <string name="shop_desc4">Framtida Pro-uppdateringar</string>
+    <string name="shop_sub4">Inkluderar allt pro-innehåll som läggs till i framtida uppdateringar!</string>
 </resources>
